# django-migration-sandbox

./: Makefile  README.md  pyproject.toml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
project/: settings.py  urls.py
